--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kyhaidang.github.io/thucungshop",
+  "homepage": "https://https://kyhaidang.github.io/dog-products",
   "name": "client",
   "version": "0.1.0",
   "private": true,
